# lexica

./: README.md  create_diacritic_free_view.py  downcase_nfd.py  lexica-cli.py  lexica.py  pyproject.toml
lexica/: app.json  metro.config.js  package-lock.json  package.json
lexica/app/: _layout.tsx
lexica/app/(tabs)/: explore.tsx  index.tsx
lexica/components/: DebugDatabase.tsx  GreekSearch.tsx
lexica/hooks/: useDatabase.ts
python/: add_nfd_column.py  lexica-cli.py  lexica.py  pyproject.toml  test.py
