[tool.poetry]
name = "lexica"
version = "0.1.0"
description = "GNT data and tools"
authors = ["Mike Brinker <themikejr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
textual = "^0.89.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
